# brasilrprev

./: README.md
brprev_bot/: .coveragerc  .env  .python-version  .travis.yml  Dockerfile  Makefile  docker-compose.yml  docker_start.sh  pyproject.toml
brprev_bot/brprev_bot/: app.py  cli.py  database.py  decorators.py  models.py  tasks.py  telegram.py  views.py
brprev_bot/brprev_bot/tests/: conftest.py  factories.py
brprev_cli/: .coveragerc  .env  Dockerfile  Makefile  docker-compose.yml  docker_start.sh  pyproject.toml
brprev_cli/brprev_cli/: cli.py  database.py  settings.py  tasks.py
brprev_cli/brprev_cli/tests/: conftest.py  factories.py
