[tool.poetry]
name = "brprev_bot"
version = "0.0.1"
description = "Bot to receive search data"
authors = ["Leonam Silva <leonam.silva.cc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
psycopg2-binary = "2.8.3"
SQLAlchemy = "1.3.6"
Flask = "1.1.1"
gunicorn = "19.9.0"
Flask-SQLAlchemy = "2.4.0"
dynaconf = "2.2.2"
click = "^7.0"
pyTelegramBotAPI = "^3.6.7"
celery = "^4.4.2"
redis = "^3.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.8.0"
pytest = "^5.1.2"
pytest-cov = "^2.7.1"
pylint = "^2.4.3"
flake8 = "^3.7.8"
freezegun = "^0.3.12"
factory-boy = "^2.12.0"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
