[tool.poetry]
name = "brprev_cli"
version = "0.0.1"
description = "CLI to ask Stack OverFlow API"
authors = ["Leonam Silva <leonam.silva.@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
requests = "^2.23.0"
pymongo = "^3.10.1"
dynaconf = "^2.2.3"
celery = "^4.4.2"
redis = "^3.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.8.0"
pytest = "^5.1.2"
pytest-cov = "^2.7.1"
pylint = "^2.4.3"
flake8 = "^3.7.8"
freezegun = "^0.3.12"
factory-boy = "^2.12.0"
pytest-env = "^0.6.2"

[tool.poetry.scripts]
ask_for = "brprev_cli.cli:ask_for"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
